# finalterm

./: .gitignore  CMakeLists.txt  CNAME  ColorScheme.vala  FinalTerm.vala  LineView.vala  Makefile  Metrics.vala  README-ZSH.md  README.md  ScrollableListView.vala  Terminal.vala  TerminalView.vala  TextMenu.vala  Theme.vala  Utilities.vala  debian.sh  index.html
ColorSchemes/: chalk.ftcolors  default.ftcolors  eighties.ftcolors  greenscreen.ftcolors  ocean.ftcolors  tomorrow.ftcolors
Settings/: application.ftsettings
Startup/: bash_startup
Termlets/: ls  wget
TextMenus/: dirname.ftmenu  filename.ftmenu  pid.ftmenu
cmake/: Common.cmake  FindIntltool.cmake  Gettext.cmake  Translations.cmake  Uninstall.cmake  ValaPrecompile.cmake
data/: finalterm.1.in  finalterm.desktop  finalterm.desktop.in  org.gnome.finalterm.gschema.xml
data/ColorSchemes/: ftcolors.erb  mocha.ftcolors  monokai.ftcolors  railscasts.ftcolors  solarized.ftcolors
data/KeyBindings/: default.ftkeys
data/Startup/: bash_startup  bash_startup.in  preexec.bash  preexec.bash.in  zsh_startup.in
data/Startup/zsh_functions/: final_term_control_sequence  send_control_sequence  send_progress  text_menu_end  text_menu_start
data/TerminalCommands/: default.ftcommands
data/Termlets/: ls  ps  wget
data/Termlets/bash/: ls.in  ps.in  wget.in
data/Termlets/zsh/: ls.in  ps.in  wget.in
data/TextMenus/: dirname.ftmenu  filename.ftmenu  ip_address.ftmenu  pid.ftmenu  url.ftmenu
data/Themes/default/: default.fttheme  style.css
debian/: bzr-builder.manifest  changelog  control  copyright  files  manpages  rules
debian/source/: include-binaries
gnulib/: Makefile.am  autogen.sh  configure.ac
gnulib/lib/: Makefile.am  dummy.c  pty.in.h
gnulib/m4/: gnulib-cache.m4  gnulib-common.m4  gnulib-comp.m4  pty_h.m4
po/: CMakeLists.txt  de.po  es.po  finalterm.pot  hu.po  pt-br.po  zh-hans.po  zh-hans.po~
src/: Autocompletion.vala  CharacterAttributes.vala  ColorScheme.vala  Command.vala  Config.vala.cmake  FinalTerm.vala  KeyBindings.vala  LineView.vala  Metrics.vala  NestingContainer.vala  NotifyingList.vala  ScrollableListView.vala  Selection.vala  Settings.vala  SettingsWindow.vala  Terminal.vala  TerminalOutput.vala  TerminalStream.vala  TerminalView.vala  TerminalWidget.vala  TextMenu.vala  Theme.vala  Utilities.vala
src/resources/: finalterm.gresource.xml
src/resources/ui/: SettingsWindow.ui
vapi/: Config.vapi  keybinder-3.0.vapi
