#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gnulib], [HEAD])

AM_INIT_AUTOMAKE

AC_PROG_CC

gl_EARLY

AC_CONFIG_MACRO_DIR([m4])

LT_INIT
gl_INIT

AC_CONFIG_FILES([
	Makefile
	lib/Makefile
])

AC_OUTPUT

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

